kubernetes/mini/apps/selfhosted/stirling-pdf/app/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: stirling-pdf
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: stirling-pdf
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            io.kubernetes.pod.namespace: network
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
